PacPci2.py


# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 50
if _libs["PacPci2"].has("setParametricFilter", "cdecl"):
    setParametricFilter = _libs["PacPci2"].get("setParametricFilter", "cdecl")
    setParametricFilter.argtypes = [c_ushort, c_ushort]
    setParametricFilter.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 51
if _libs["PacPci2"].has("setCycleCounterSource", "cdecl"):
    setCycleCounterSource = _libs["PacPci2"].get("setCycleCounterSource", "cdecl")
    setCycleCounterSource.argtypes = [c_ushort]
    setCycleCounterSource.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 52
if _libs["PacPci2"].has("setCycleCounterThreshold", "cdecl"):
    setCycleCounterThreshold = _libs["PacPci2"].get("setCycleCounterThreshold", "cdecl")
    setCycleCounterThreshold.argtypes = [c_short]
    setCycleCounterThreshold.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 53
if _libs["PacPci2"].has("setCycleCounterFilter", "cdecl"):
    setCycleCounterFilter = _libs["PacPci2"].get("setCycleCounterFilter", "cdecl")
    setCycleCounterFilter.argtypes = [c_ushort]
    setCycleCounterFilter.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 54
if _libs["PacPci2"].has("validateSetup", "cdecl"):
    validateSetup = _libs["PacPci2"].get("validateSetup", "cdecl")
    validateSetup.argtypes = []
    validateSetup.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 55
if _libs["PacPci2"].has("copySetupMessagesToBuffer", "cdecl"):
    copySetupMessagesToBuffer = _libs["PacPci2"].get("copySetupMessagesToBuffer", "cdecl")
    copySetupMessagesToBuffer.argtypes = [POINTER(c_ubyte)]
    copySetupMessagesToBuffer.restype = c_ushort

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 56
if _libs["PacPci2"].has("startTest", "cdecl"):
    startTest = _libs["PacPci2"].get("startTest", "cdecl")
    startTest.argtypes = []
    startTest.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 57
if _libs["PacPci2"].has("stopTest", "cdecl"):
    stopTest = _libs["PacPci2"].get("stopTest", "cdecl")
    stopTest.argtypes = []
    stopTest.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 58
if _libs["PacPci2"].has("abortTest", "cdecl"):
    abortTest = _libs["PacPci2"].get("abortTest", "cdecl")
    abortTest.argtypes = []
    abortTest.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 59
if _libs["PacPci2"].has("pauseTest", "cdecl"):
    pauseTest = _libs["PacPci2"].get("pauseTest", "cdecl")
    pauseTest.argtypes = []
    pauseTest.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 60
if _libs["PacPci2"].has("resumeTest", "cdecl"):
    resumeTest = _libs["PacPci2"].get("resumeTest", "cdecl")
    resumeTest.argtypes = []
    resumeTest.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 61
if _libs["PacPci2"].has("sendTimeMark", "cdecl"):
    sendTimeMark = _libs["PacPci2"].get("sendTimeMark", "cdecl")
    sendTimeMark.argtypes = []
    sendTimeMark.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 62
if _libs["PacPci2"].has("readTimeOfTest", "cdecl"):
    readTimeOfTest = _libs["PacPci2"].get("readTimeOfTest", "cdecl")
    readTimeOfTest.argtypes = [POINTER(c_double)]
    readTimeOfTest.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 63
if _libs["PacPci2"].has("pulseChannelAST", "cdecl"):
    pulseChannelAST = _libs["PacPci2"].get("pulseChannelAST", "cdecl")
    pulseChannelAST.argtypes = [c_ushort]
    pulseChannelAST.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 64
if _libs["PacPci2"].has("startAST", "cdecl"):
    startAST = _libs["PacPci2"].get("startAST", "cdecl")
    startAST.argtypes = [c_short, c_short, c_short]
    startAST.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 65
if _libs["PacPci2"].has("startAST_Ex", "cdecl"):
    startAST_Ex = _libs["PacPci2"].get("startAST_Ex", "cdecl")
    startAST_Ex.argtypes = [POINTER(c_short), c_short, c_short, c_short, c_short, c_short, String, c_short, String, c_ushort, POINTER(c_int)]
    startAST_Ex.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 76
if _libs["PacPci2"].has("forceTrigger", "cdecl"):
    forceTrigger = _libs["PacPci2"].get("forceTrigger", "cdecl")
    forceTrigger.argtypes = [c_ushort]
    forceTrigger.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 78
if _libs["PacPci2"].has("poll", "cdecl"):
    poll = _libs["PacPci2"].get("poll", "cdecl")
    poll.argtypes = []
    poll.restype = None

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 79
if _libs["PacPci2"].has("getMessage", "cdecl"):
    getMessage = _libs["PacPci2"].get("getMessage", "cdecl")
    getMessage.argtypes = [POINTER(c_ubyte), c_ushort]
    getMessage.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 80
if _libs["PacPci2"].has("readForcedParametric", "cdecl"):
    readForcedParametric = _libs["PacPci2"].get("readForcedParametric", "cdecl")
    readForcedParametric.argtypes = [c_short]
    readForcedParametric.restype = c_double

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 81
if _libs["PacPci2"].has("getHitDataSetValue", "cdecl"):
    getHitDataSetValue = _libs["PacPci2"].get("getHitDataSetValue", "cdecl")
    getHitDataSetValue.argtypes = [POINTER(c_ubyte), c_ushort, POINTER(c_float)]
    getHitDataSetValue.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 82
if _libs["PacPci2"].has("getTddDataSetValue", "cdecl"):
    getTddDataSetValue = _libs["PacPci2"].get("getTddDataSetValue", "cdecl")
    getTddDataSetValue.argtypes = [POINTER(c_ubyte), c_ushort, c_ushort, POINTER(c_float)]
    getTddDataSetValue.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 83
if _libs["PacPci2"].has("getWaveformValue", "cdecl"):
    getWaveformValue = _libs["PacPci2"].get("getWaveformValue", "cdecl")
    getWaveformValue.argtypes = [POINTER(c_ubyte), c_ushort, POINTER(c_float)]
    getWaveformValue.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 84
if _libs["PacPci2"].has("getTimeOfTest", "cdecl"):
    getTimeOfTest = _libs["PacPci2"].get("getTimeOfTest", "cdecl")
    getTimeOfTest.argtypes = [POINTER(c_ubyte), c_ushort, POINTER(c_float)]
    getTimeOfTest.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 85
if _libs["PacPci2"].has("getTimeOfCommand", "cdecl"):
    getTimeOfCommand = _libs["PacPci2"].get("getTimeOfCommand", "cdecl")
    getTimeOfCommand.argtypes = [POINTER(c_ubyte), POINTER(c_float)]
    getTimeOfCommand.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 86
if _libs["PacPci2"].has("calculateCentroidAndPeak", "cdecl"):
    calculateCentroidAndPeak = _libs["PacPci2"].get("calculateCentroidAndPeak", "cdecl")
    calculateCentroidAndPeak.argtypes = [c_ushort]
    calculateCentroidAndPeak.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 87
if _libs["PacPci2"].has("getCentroidAndPeak", "cdecl"):
    getCentroidAndPeak = _libs["PacPci2"].get("getCentroidAndPeak", "cdecl")
    getCentroidAndPeak.argtypes = [POINTER(c_ushort), POINTER(c_ushort)]
    getCentroidAndPeak.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 88
if _libs["PacPci2"].has("setFftFrequencySpan", "cdecl"):
    setFftFrequencySpan = _libs["PacPci2"].get("setFftFrequencySpan", "cdecl")
    setFftFrequencySpan.argtypes = [c_int, c_int, c_int, POINTER(c_int), POINTER(c_int)]
    setFftFrequencySpan.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 89
if _libs["PacPci2"].has("getFftPartialPowers", "cdecl"):
    getFftPartialPowers = _libs["PacPci2"].get("getFftPartialPowers", "cdecl")
    getFftPartialPowers.argtypes = [c_int, POINTER(c_short)]
    getFftPartialPowers.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 90
if _libs["PacPci2"].has("calculateWaveformMsgFftPartialPowers", "cdecl"):
    calculateWaveformMsgFftPartialPowers = _libs["PacPci2"].get("calculateWaveformMsgFftPartialPowers", "cdecl")
    calculateWaveformMsgFftPartialPowers.argtypes = [POINTER(c_ubyte)]
    calculateWaveformMsgFftPartialPowers.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 91
if _libs["PacPci2"].has("scaleWaveform", "cdecl"):
    scaleWaveform = _libs["PacPci2"].get("scaleWaveform", "cdecl")
    scaleWaveform.argtypes = [POINTER(c_ubyte), c_float, POINTER(c_float), c_short]
    scaleWaveform.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 93
if _libs["PacPci2"].has("setAudioChannel", "cdecl"):
    setAudioChannel = _libs["PacPci2"].get("setAudioChannel", "cdecl")
    setAudioChannel.argtypes = [c_short, c_short]
    setAudioChannel.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 95
if _libs["PacPci2"].has("setDigitalOutput", "cdecl"):
    setDigitalOutput = _libs["PacPci2"].get("setDigitalOutput", "cdecl")
    setDigitalOutput.argtypes = [c_int, c_ubyte]
    setDigitalOutput.restype = None

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 96
if _libs["PacPci2"].has("readDigitalInput", "cdecl"):
    readDigitalInput = _libs["PacPci2"].get("readDigitalInput", "cdecl")
    readDigitalInput.argtypes = [c_int]
    readDigitalInput.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 100
if _libs["PacPci2"].has("enableWaveformStreaming", "cdecl"):
    enableWaveformStreaming = _libs["PacPci2"].get("enableWaveformStreaming", "cdecl")
    enableWaveformStreaming.argtypes = [c_int]
    enableWaveformStreaming.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 101
if _libs["PacPci2"].has("setWaveformStreamingMode", "cdecl"):
    setWaveformStreamingMode = _libs["PacPci2"].get("setWaveformStreamingMode", "cdecl")
    setWaveformStreamingMode.argtypes = [c_int]
    setWaveformStreamingMode.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 102
if _libs["PacPci2"].has("setWaveformStreamingPeriod", "cdecl"):
    setWaveformStreamingPeriod = _libs["PacPci2"].get("setWaveformStreamingPeriod", "cdecl")
    setWaveformStreamingPeriod.argtypes = [c_ulong]
    setWaveformStreamingPeriod.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 103
if _libs["PacPci2"].has("setWaveformStreamingFilePrefix", "cdecl"):
    setWaveformStreamingFilePrefix = _libs["PacPci2"].get("setWaveformStreamingFilePrefix", "cdecl")
    setWaveformStreamingFilePrefix.argtypes = [String]
    setWaveformStreamingFilePrefix.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 104
if _libs["PacPci2"].has("setWaveformStreamingChannel", "cdecl"):
    setWaveformStreamingChannel = _libs["PacPci2"].get("setWaveformStreamingChannel", "cdecl")
    setWaveformStreamingChannel.argtypes = [c_ushort, c_int]
    setWaveformStreamingChannel.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 105
if _libs["PacPci2"].has("setWaveformStreamingLength", "cdecl"):
    setWaveformStreamingLength = _libs["PacPci2"].get("setWaveformStreamingLength", "cdecl")
    setWaveformStreamingLength.argtypes = [c_ushort, c_long, c_ulong]
    setWaveformStreamingLength.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 107
if _libs["PacPci2"].has("getRequiredSampleBufferLen", "cdecl"):
    getRequiredSampleBufferLen = _libs["PacPci2"].get("getRequiredSampleBufferLen", "cdecl")
    getRequiredSampleBufferLen.argtypes = [c_int]
    getRequiredSampleBufferLen.restype = c_ulong

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 108
if _libs["PacPci2"].has("setStreamingBuffer", "cdecl"):
    setStreamingBuffer = _libs["PacPci2"].get("setStreamingBuffer", "cdecl")
    setStreamingBuffer.argtypes = [c_int, POINTER(c_float), c_ulong, c_short]
    setStreamingBuffer.restype = POINTER(c_float)
